<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="menu_settings">用户</string>
    <string name="menu_search">Search</string>

    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="app_about">关于TMVP\n\n写代码，最爽的事情就是，\n用最少的代码，做最多的事情。\n用最少的改动做最简单的升级迭代扩展，\n用最快的方式，做最复杂的效果。\n用最高的效率，做最好的用户体验。\n\n 为了这个目标，\n我和TMVP一路探寻。\n也希望能够给你一些帮助。\n\n嗯，下面这货，如果你看他不爽请随便扫他\n</string>


    <string name="theme">夜间</string>
    <string name="release">发布</string>
    <string name="sort">排序</string>

    <string name="hint_long">▆▆▆▆▆▆▆▆▆▆▆▆▆</string>
    <string name="hint_short">▆▆▆▆▆</string>

    <string name="app_name">大吉利</string>
    <string name="version">1.0.0</string>
    <string name="website">网站网址：www.luyun888.com</string>
    <string name="servicephone">客服QQ:2275002280</string>
    <string name="servicephone_num">2275002280</string>
    <string name="company">版权所有：深圳市大吉利网络科技有限公司</string>
    <string name="cp_ssq">双色球</string>
    <string name="cp_fc3d">福彩3D</string>
    <string name="cp_qlc">七乐彩</string>
    <string name="cp_dlt">大乐透</string>
    <string name="cp_pl5">排列五</string>
    <string name="cp_pl3">排列三</string>
    <string name="cp_qxc">七星彩</string>
    <string name="cp_22x5">22选5</string>
    <string name="cp_sfc">胜负彩</string>
    <string name="cp_6cbqc">六场半全场</string>
    <string name="cp_4cjq">四场进球</string>
    <string name="cp_11ydj">十一运夺金</string>
    <string name="jixuan">机选</string>
    <string name="qlc_tishi">至少选择7个球进行投注</string>
    <string name="cp22x5_tishi">至少选择5个球进行投注</string>
    <string name="pl3_tishi">每位至少选择一个球</string>
    <string name="regist_cst_trip"><u>《大吉利服务条款》</u></string>
    <string name="menu_update">刷新</string>
    <string name="menu_system_notice">系统公告</string>
    <string name="menu_new_act">优惠活动</string>
    <string name="menu_change_account">更改帐户</string>
    <string name="menu_setting">设置</string>
    <string name="menu_exit">退出</string>
    <string name="no_trip" />
    <string name="loading">加载中…</string>
    <string name="refresh">刷新</string>
    <string name="lottery_hall">购彩大厅</string>
    <string name="lottery_info">开奖信息</string>
    <string name="scores_live">比分直播</string>
    <string name="lottery_show">大神晒单</string>
    <string name="show_details">晒单详情</string>
    <string name="shaidan_records">晒单记录</string>
    <string name="go_to_shaidan">我要晒单</string>
    <string name="go_to_shaidan2">晒单</string>
    <string name="add_gendan">添加跟单</string>
    <string name="shaidan">晒单</string>
    <string name="my_gendan">定制跟单</string>
    <string name="producing_gendan">定制跟单</string>
    <string name="dingzhi_now">立即定制</string>
    <string name="fixed_share">固定份额</string>
    <string name="hongbao_detail">红包详情</string>
    <string name="fixed_proportion">固定比例</string>
    <string name="my_lottery">我的彩票</string>
    <string name="all_discusses">全部评论</string>
    <string name="writing_comment_hint">我也来说说我的看法</string>
    <string name="comments">评论</string>
    <string name="comments_empty_list">快来发表你的评论吧！</string>
    <string name="shaidan_title_hint">请输入一个吸引人的标题（5-15字，必填）</string>
    <string name="send_shaidan_hint">标题在5-15字以内</string>
    <string name="shaidan_content_hint">请输入您的购彩心得或者想与其他人分享的内容（130字以内，可不填）</string>
    <string name="hongbao_num_hint">填写个数</string>
    <string name="total_money_hint">填写金额</string>
    <string name="fixed_share_rules">"1.假如跟单份额大于合买剩余份数则以合买方案剩余跟单份额为最终的跟单份额;

2.用户的余额如果不够固定跟单份额数，则会导致跟单失败;

3.每个大神跟单方案只能定制一次;"</string>
    <string name="fixed_proportion_rules">"1.假如跟单比例大于最大份额则以最大份额为最终的跟单份额;

2.假如跟单份额大于合买剩余份数则以合买方案剩余跟单份额为最终的跟单份额;

3.用户的余额如果不够固定跟单份额数，则会导致跟单失败;

4.每个大神跟单方案只能定制一次;"</string>
    <string name="no_login_in">您还没有登录哦！</string>
    <string name="get_hongbao_detail">查看领取详情></string>
    <string name="show_good">赞</string>
    <string name="option">设置大厅</string>
    <string name="lottery_management">投注管理</string>
    <string name="account_management">账户管理</string>
    <string name="personal_data">个人资料</string>
    <string name="lottery_record">购彩记录</string>
    <string name="tracking_record">追号记录</string>
    <string name="account_details">账户明细</string>
    <string name="recharge">充值</string>
    <string name="Withdrawal">提款</string>
    <string name="personal_info">个人信息</string>
    <string name="change_password">修改密码</string>
    <string name="binding_card">绑定银行卡</string>
    <string name="binding_phone">绑定手机</string>
    <string name="choose_user_image">选择用户图像</string>
    <string name="back">返回</string>
    <string name="menu">菜单</string>
    <string name="choose_num">选号投注</string>
    <string name="hemai">参与合买</string>
    <string name="introduction">玩法介绍</string>
    <string name="ok">确定</string>
    <string name="cancle_comment">取消</string>
    <string name="send">发送</string>
    <string name="Ensure">确定</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="save_nameandpwd">记住密码</string>
    <string name="username">用户名</string>
    <string name="userpass">密码</string>
    <string name="useragree">我已阅读并同意</string>
    <string name="userphone">手机号码</string>
    <string name="post_userfeedback">提交反馈</string>
    <string name="userfeedback">反馈您的使用意见</string>
    <string name="click_change_image">点击更换图片</string>
    <string name="recharge_tip">温馨提示：</string>
    <string name="zhifubao_tip">1.充值无手续费；2.确认已经是支付宝会员</string>
    <string name="yibao_tip">"1.最低充值10元；
2.充值无手续费；
3.确认充值银联卡已开通网上支付功能"</string>
    <string name="szf_tip">1.面额需与充值卡面额一致，1分钟后到账</string>
    <string name="tv_tip">电视充值卡为大吉利官方发行的，充值后可购买大吉利彩票</string>
    <string name="check_sign_failed">您的订单信息已被非法篡改。</string>
    <string name="confirm_install_hint">安装提示</string>
    <string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。

点击确定，立即安装。"</string>
    <string name="remote_call_failed">Failure calling remote service</string>
    <string name="stringtou">投</string>
    <string name="stringzhu">倍</string>
    <string name="my_lottery_act_pay">充值</string>
    <string name="my_lottery_act_drawings">提款</string>
    <string name="my_lottery_act_credits_exchange">积分兑换</string>
    <string name="my_lottery_act_gcjl">交易明细</string>
    <string name="my_lottery_act_my_gendan">我的跟单</string>
    <string name="gendan_list">跟单列表</string>
    <string name="my_lottery_act_zhjl">购彩记录</string>
    <string name="my_lottery_act_zhmx">账户全览</string>
    <string name="my_lottery_act_grxx">个人信息</string>
    <string name="my_lottery_act_mmgl">密码管理</string>
    <string name="my_lottery_act_gex">检查更新</string>
    <string name="my_lottery_act_lxkf">客服QQ:2275002280</string>
    <string name="my_lottery_act_tczh">退出账号</string>
    <string name="my_lottery_act_add_number">添加号码</string>
    <string name="my_lottery_act_tz">投注</string>
    <string name="register_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ.@~-,:*?!_#/=+&amp;^;%…$>|·¥–</string>
    <string name="fragment_one">进度排序</string>
    <string name="fragment_two">战绩排序</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ovrt">已经全部加载完毕</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="fangandetails">方案详情</string>
    <string name="action_settings">Settings</string>
    <string name="title">智付安全支付DEMO</string>
    <string name="confirm_install_hint2">安装提示</string>
    <string name="confirm_install2">"为保证您的交易安全，需要您安装智付安全支付服务，才能进行付款。

点击确定，立即安装。"</string>
    <string name="Ensure2">确定</string>
    <string name="Cancel">取消</string>
    <string name="str_qihao">期号</string>
    <string name="str_kaijianghaoma">开奖号码</string>
    <string name="str_daxiaobi">大小比</string>
    <string name="str_qioubi">奇偶比</string>
    <string name="str_shiwei">十位</string>
    <string name="str_gewei">个位</string>
    <string name="str_housan">后三</string>
    <string name="btn_random_text">机选</string>
    <string name="btn_clear_text">清空</string>
</resources>
