<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14.0sp" android:textColor="@color/cst_color_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:text="@string/str_qihao" />
        <TextView android:textSize="14.0sp" android:textColor="@color/cst_color_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="45.0dip" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:text="@string/str_kaijianghaoma" />
        <TextView android:textSize="14.0sp" android:textColor="@color/cst_color_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:text="@string/str_shiwei" />
        <TextView android:textSize="14.0sp" android:textColor="@color/cst_color_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:text="@string/str_gewei" />
        <TextView android:textSize="14.0sp" android:textColor="@color/cst_color_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:text="@string/str_housan" />
    </LinearLayout>
    <View android:background="@color/cst_color_gray" android:layout_width="fill_parent" android:layout_height="1.0px" />
</LinearLayout>