<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout android:orientation="horizontal" android:id="@id/top" android:background="@drawable/top" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/comment_back" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/img_jt" android:layout_weight="1.0" />
        <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/show_details" android:layout_weight="6.0" />
        <TextView android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/comment_add_gendan" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/add_gendan" android:layout_weight="1.0" />
    </LinearLayout>
 <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true" android:layout_above="@id/bottom" android:layout_below="@id/top">
 <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
<RelativeLayout android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.ui.main.view.CircleImageView android:id="@id/comment_info_user_image" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:src="@drawable/userinfoa" />
                <TextView android:textSize="14.0sp" android:textColor="@color/common_dark" android:id="@id/comment_info_username" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="hh" android:layout_toRightOf="@id/comment_info_user_image" />
                <TextView android:textSize="12.0sp" android:textColor="@color/color_gray" android:id="@id/comment_info_time" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="xxxx/xx/xx" android:layout_toRightOf="@id/comment_info_user_image" android:layout_below="@id/comment_info_username" />
                <ImageView android:id="@id/comment_hongbao_none" android:paddingRight="10.0dip" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
                <ImageView android:id="@id/comment_hongbao_have" android:paddingRight="10.0dip" android:visibility="gone" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <TextView android:textSize="16.0dip" android:textColor="@color/common_dark" android:id="@id/comment_message" android:paddingLeft="20.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="hhhh" />
            <ImageView android:layout_gravity="center_horizontal" android:id="@id/comment_info_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/default_image" android:scaleType="centerCrop" android:adjustViewBounds="true" />
            <TextView android:textSize="16.0sp" android:textColor="@color/common_dark" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/all_discusses" />
            <TextView android:background="@color/divideColor" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <TextView android:textSize="16.0sp" android:gravity="center_horizontal" android:id="@id/empty_list" android:paddingTop="40.0dip" android:paddingBottom="60.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/comments_empty_list" />
            <ListView android:id="@id/comment_info_discusses" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@color/divideColor" android:dividerHeight="1.0dip" />
        </LinearLayout>
    </ScrollView>
 <LinearLayout android:id="@id/bottom" android:background="@color/color_gray" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
 <LinearLayout android:id="@id/ll_commentting" android:background="@color/white" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginTop="1.0dip" android:layout_weight="1.0">
            <TextView android:textSize="14.0sp" android:textColor="@color/game_common_text" android:gravity="left" android:paddingLeft="60.0dip" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/comments" android:drawableLeft="@drawable/discuss" android:drawablePadding="10.0dip" />
            <TextView android:textSize="14.0sp" android:textColor="@color/game_common_text" android:gravity="center_vertical" android:id="@id/comment_discusses_Num" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="0" android:layout_weight="2.0" />
        </LinearLayout>
<LinearLayout android:id="@id/ll_show_good" android:background="@color/white" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="1.0dip" android:layout_marginTop="1.0dip" android:layout_weight="1.0">
            <TextView android:textSize="14.0sp" android:textColor="@color/game_common_text" android:gravity="left" android:id="@id/tv_show_good" android:paddingLeft="60.0dip" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/show_good" android:drawableLeft="@drawable/tv_show_good_style" android:drawablePadding="10.0dip" />
            <TextView android:textSize="14.0sp" android:textColor="@color/game_common_text" android:gravity="center_vertical" android:id="@id/comment_show_good_Num" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="0" android:layout_weight="2.0" />
        </LinearLayout>
    </LinearLayout>
 <RelativeLayout android:id="@id/announcing_comment_layout" android:background="#33333333" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
 <RelativeLayout android:id="@id/rl_comment_backgroud" android:background="#ffeeeeee" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="180.0dip" android:layout_alignParentBottom="true">
            <EditText android:textSize="18.0sp" android:gravity="top|left|center" android:id="@id/writing_comment" android:background="#ffffffff" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="120.0dip" android:hint="@string/writing_comment_hint" android:layout_above="@id/send_comment" />
            <Button android:textSize="12.0sp" android:textColor="@color/white" android:id="@id/send_comment" android:background="@drawable/btn_send_shape" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/send" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
            <Button android:textSize="12.0sp" android:textColor="@color/common_dark" android:id="@id/cancel_comment" android:background="@drawable/btn_cancle_shape" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/cancle_comment" android:layout_toLeftOf="@id/send_comment" android:layout_alignParentBottom="true" />
        </RelativeLayout>
    </RelativeLayout>
 <FrameLayout android:id="@id/fl_hongbao" android:background="#55555555" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerInParent="true">
 <RelativeLayout android:layout_gravity="top" android:id="@id/hongbao_bg" android:background="@drawable/hongbaobg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="50.0dip" android:layout_marginTop="100.0dip" android:layout_marginRight="50.0dip" android:layout_marginBottom="150.0dip">
            <ImageView android:id="@id/close_hongbao" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:src="@drawable/close_hongbao" />
            <TextView android:textSize="16.0sp" android:textColor="@color/white" android:id="@id/hongbaoOwner" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="xxx" android:drawableTop="@drawable/userinfoa" android:layout_centerHorizontal="true" />
            <TextView android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/whether_have_hongbao" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="xxx" android:layout_below="@id/hongbaoOwner" android:layout_centerHorizontal="true" />
            <TextView android:textSize="25.0sp" android:textColor="@color/white" android:gravity="center_horizontal" android:id="@id/whether_can_open" android:background="@drawable/hongbaobg2" android:layout_width="wrap_content" android:layout_height="80.0dip" android:layout_marginTop="20.0dip" android:text="xxxxxxxx" android:layout_below="@id/whether_have_hongbao" android:layout_centerHorizontal="true" />
            <ImageView android:id="@id/open_money" android:background="@drawable/open_money" android:layout_width="80.0dip" android:layout_height="80.0dip" android:layout_marginTop="60.0dip" android:layout_below="@id/whether_have_hongbao" android:layout_centerHorizontal="true" />
            <TextView android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/get_hongbao_detail" android:padding="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/get_hongbao_detail" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </FrameLayout>
</RelativeLayout>
