<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/root_view" android:background="@color/color_gray" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="horizontal" android:id="@id/top" android:background="@drawable/top" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/shaidan_comment_back" android:paddingLeft="5.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:src="@drawable/img_jt" android:layout_weight="2.0" />
            <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/shaidan" android:layout_weight="4.0" />
            <TextView android:textSize="16.0sp" android:textColor="@color/white" android:gravity="right|center" android:id="@id/shaidan_comment_send" android:paddingRight="20.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/send" android:layout_weight="2.0" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/comtent_bg" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:textSize="12.0sp" android:textColor="@color/common_dark" android:id="@id/shaidan_title" android:background="@null" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:hint="@string/shaidan_title_hint" />
            <TextView android:background="#ffaaaaaa" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="7.0dip" android:layout_marginTop="3.0dip" android:layout_marginRight="7.0dip" android:layout_marginBottom="3.0dip" />
            <EditText android:textSize="12.0sp" android:textColor="@color/common_dark" android:gravity="top|left|center" android:id="@id/shaidan_content" android:background="@null" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="100.0dip" android:layout_margin="5.0dip" android:hint="@string/shaidan_content_hint" />
        </LinearLayout>
        <ImageView android:layout_gravity="left" android:id="@id/shaidan_pic" android:layout_width="120.0dip" android:layout_height="120.0dip" android:layout_margin="10.0dip" android:scaleType="fitStart" />
        <TextView android:background="#ffaaaaaa" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_margin="5.0dip" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16.0sp" android:textColor="@color/cst_color_orange" android:layout_gravity="center_vertical" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="发红包" />
            <ImageView android:layout_gravity="center_vertical" android:id="@id/ios_switch" android:layout_width="50.0dip" android:layout_height="50.0dip" android:src="@drawable/ios7_switch_on" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/ll_whether_hand_out" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_margin="10.0dip">
                <TextView android:textSize="18.0sp" android:textColor="@color/common_dark" android:gravity="center" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="红包个数" />
                <Space android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
                <EditText android:textSize="18.0sp" android:gravity="center" android:layout_gravity="right" android:id="@id/hongbao_num" android:background="@null" android:layout_width="wrap_content" android:layout_height="fill_parent" android:hint="@string/hongbao_num_hint" android:singleLine="true" android:inputType="number" />
                <TextView android:textSize="18.0sp" android:textColor="@color/common_dark" android:gravity="center" android:layout_gravity="right" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="个" android:singleLine="true" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_margin="10.0dip">
                <TextView android:textSize="18.0sp" android:textColor="@color/common_dark" android:gravity="center" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="总金额" />
                <Space android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
                <EditText android:textSize="18.0sp" android:gravity="center" android:layout_gravity="right" android:id="@id/total_money" android:background="@null" android:layout_width="wrap_content" android:layout_height="fill_parent" android:hint="@string/total_money_hint" android:inputType="number" />
                <TextView android:textSize="18.0sp" android:textColor="@color/common_dark" android:gravity="center" android:layout_gravity="right" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="元" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>